Added test for stale data cleaner
* Added test
* Renamed activeInstances core method to instances