@@ -1,11 +1,13 @@
 package com.phonepe.drove.controller.statedb;
 
+import com.google.common.collect.Sets;
 import com.phonepe.drove.models.instance.InstanceInfo;
 import com.phonepe.drove.models.instance.InstanceState;
 
 import java.util.*;
 
-import static com.phonepe.drove.models.instance.InstanceState.*;
+import static com.phonepe.drove.models.instance.InstanceState.ACTIVE_STATES;
+import static com.phonepe.drove.models.instance.InstanceState.HEALTHY;
 
 /**
  *
@@ -13,24 +15,29 @@ import static com.phonepe.drove.models.instance.InstanceState.*;
 public interface InstanceInfoDB {
 
     default List<InstanceInfo> healthyInstances(String appId) {
-        return activeInstances(appId, Collections.singleton(HEALTHY), 0, Integer.MAX_VALUE);
+        return instances(appId, Set.of(HEALTHY), 0, Integer.MAX_VALUE);
     }
-
-    List<InstanceInfo> activeInstances(String appId, Set<InstanceState> validStates, int start, int size);
 
     default List<InstanceInfo> activeInstances(String appId, int start, int size) {
-        return activeInstances(appId, ACTIVE_STATES, start, size);
+        return instances(appId, ACTIVE_STATES, start, size);
     }
 
-    Optional<InstanceInfo> instance(String appId, String instanceId);
+    default List<InstanceInfo> oldInstances(String appId, int start, int size) {
+        return instances(
+                appId, Sets.difference(EnumSet.allOf(InstanceState.class), ACTIVE_STATES), start, size);
+    }
 
     default long instanceCount(final String appId, InstanceState requiredState) {
         return instanceCount(appId, Collections.singleton(requiredState));
     }
 
     default long instanceCount(final String appId, Set<InstanceState> requiredStates) {
-        return activeInstances(appId, requiredStates, 0, Integer.MAX_VALUE).size();
+        return instances(appId, requiredStates, 0, Integer.MAX_VALUE).size();
     }
+
+    List<InstanceInfo> instances(String appId, Set<InstanceState> validStates, int start, int size);
+
+    Optional<InstanceInfo> instance(String appId, String instanceId);
 
     boolean updateInstanceState(String appId, String instanceId, InstanceInfo instanceInfo);
 
@@ -40,5 +47,4 @@ public interface InstanceInfoDB {
 
     long markStaleInstances(final String appId);
 
-    List<InstanceInfo> oldInstances(String appId, int start, int size);
 }
